# LXMF-rs

./: CONTRIBUTING.md  Cargo.toml  Makefile  README.md  deny.toml
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: bump-reticulum-pin.yml  ci.yml  leader-readiness.yml  nightly-soak-chaos.yml  sideband-e2e.yml
crates/apps/lxmf-cli/: Cargo.toml
crates/apps/reticulumd/: Cargo.toml
crates/apps/reticulumd/src/: config.rs  inbound_delivery.rs  receipt_bridge.rs
crates/apps/reticulumd/tests/: config.rs
crates/apps/rns-tools/: Cargo.toml
crates/internal/lxmf-legacy/: Cargo.toml
crates/internal/reticulum-legacy/: Cargo.toml
crates/libs/lxmf-core/: Cargo.toml
crates/libs/lxmf-sdk/: Cargo.toml
crates/libs/lxmf-sdk/fuzz/: Cargo.toml
crates/libs/lxmf-sdk/fuzz/fuzz_targets/: sdk_json_envelope.rs
crates/libs/rns-core/: Cargo.toml
crates/libs/rns-core/src/: destination.rs  hash.rs  identity.rs  lib.rs  ratchets.rs
crates/libs/rns-rpc/: Cargo.toml
crates/libs/rns-rpc/fuzz/: Cargo.toml
crates/libs/rns-rpc/fuzz/fuzz_targets/: rpc_frame_envelope.rs
crates/libs/rns-transport/: Cargo.toml
crates/libs/rns-transport/src/: iface.rs  lib.rs
crates/libs/rns-transport/src/iface/: serial.rs
crates/libs/rns-transport/src/transport/: mod.rs
crates/libs/test-support/: Cargo.toml
crates/lxmf/: Cargo.toml  build.rs
crates/lxmf/src/: lib.rs
crates/lxmf/tests/: lxmf_cli_args.rs  lxmf_daemon_commands.rs  lxmf_daemon_supervisor.rs  lxmf_iface_commands.rs  propagation_store.rs  python_client_replay_gate.rs  rpc_contract_methods.rs
crates/reticulum-daemon/: Cargo.toml
crates/reticulum-daemon/src/: direct_delivery.rs  inbound_delivery.rs  lxmf_bridge.rs  receipt_bridge.rs
crates/reticulum-daemon/tests/: direct_link_delivery.rs  direct_link_inbound.rs  lxmf_bridge_tests.rs
crates/reticulum/src/: delivery.rs  lib.rs
crates/reticulum/tests/: parity_matrix_gate.rs  rpc_methods_extended.rs
docs/: async-conformance-matrix.md  compatibility-contract.md  compatibility-matrix.md  lxmf-async-api.yaml  lxmf-cli.md  lxmf-rs-api.md  lxmf-tui.md  payload-contract.md  release-candidate-runbook.md  release-readiness.md
docs/adr/: 0003-aggressive-platform-split.md  0004-sdk-v25-threat-model.md  0005-extension-registry-governance.md  0007-crypto-agility-roadmap.md
docs/architecture/: overview.md
docs/contracts/: compatibility-matrix.md  extension-registry.md  mobile-ble-host-contract.md  payload-contract.md  rpc-contract.md  schema-driven-clients.md  sdk-v2-api-stability.md  sdk-v2-attachments.md  sdk-v2-backends.md  sdk-v2-errors.md  sdk-v2-events.md  sdk-v2-feature-matrix.md  sdk-v2-identity.md  sdk-v2-markers.md  sdk-v2-migration.md  sdk-v2-telemetry.md  sdk-v2-topics.md  sdk-v2.md  third-party-compatibility-kit.md
docs/contracts/baselines/: interop-artifacts-manifest.json  interop-drift-baseline.json  lxmf-sdk-public-api.txt  schema-client-generation-baseline.json
docs/fixtures/sdk-v2/: attachment.meta.valid.json  command.attachment_associate_topic.invalid.json  command.attachment_associate_topic.valid.json  command.attachment_download_chunk.invalid.json  command.attachment_download_chunk.valid.json  command.attachment_store.valid.json  command.attachment_upload_chunk.invalid.json  command.attachment_upload_chunk.valid.json  command.attachment_upload_commit.invalid.json  command.attachment_upload_commit.valid.json  command.attachment_upload_start.invalid.json  command.attachment_upload_start.valid.json  command.identity_announce_now.invalid.json  command.identity_announce_now.valid.json  marker.record.valid.json  (+15 more)
docs/migrations/: 2026-aggressive-platform-split.md  sdk-v2.5-cutover-map.md
docs/mobile/: android-ble.md  ios-ble.md
docs/plans/: 2026-01-23-lxmf-rust-library.md  2026-01-26-lxmf-reticulum-full-parity.md  2026-01-26-lxmf-stamps-tickets-implementation.md  2026-02-22-cross-platform-interfaces-pr-roadmap.md  lxmf-parity-matrix.md  reticulum-parity-matrix.md
docs/runbooks/: compliance-profiles.md  fuzzing-campaign.md  incident-response-playbooks.md  mobile-ble-conformance.md  release-candidate-runbook.md  release-readiness.md  reticulumd-ble-interface.md  reticulumd-lora-interface.md  reticulumd-serial-interface.md  sdk-config-cookbook.md  security-review-checklist.md  soak-chaos-campaign.md
docs/sdk/: quickstart.md
scripts/: sideband-e2e.py
src/: constants.rs  error.rs  handlers.rs  helpers.rs  lib.rs  stamper.rs
src/cli/: app.rs  commands_daemon.rs  commands_iface.rs  commands_message.rs  commands_paper.rs  commands_peer.rs  commands_profile.rs  commands_propagation.rs  daemon.rs  mod.rs  output.rs  profile.rs  rpc_client.rs
src/lxmd/: config.rs  runtime.rs
src/message/: delivery.rs  mod.rs  payload.rs  types.rs  wire.rs
src/peer/: mod.rs
src/propagation/: mod.rs
src/reticulum/: mod.rs
src/router/: mod.rs
src/storage/: file_store.rs  mod.rs
tests/: delivery_parity.rs  handlers_parity.rs  lxmd_cli.rs  lxmd_runtime.rs  lxmf_cli_args.rs  lxmf_contact_commands.rs  lxmf_daemon_commands.rs  lxmf_daemon_supervisor.rs  lxmf_iface_commands.rs  lxmf_message_commands.rs  lxmf_peer_commands.rs  lxmf_profile.rs  lxmf_rpc_client.rs  lxmf_runtime_context.rs  lxmf_tui_smoke.rs  message_fixtures.rs  message_payload.rs  message_signature.rs  paper_pack_parity.rs  parity_matrix_gate.rs  payload_stamp_parity.rs  pn_announce_data_parity.rs  propagation.rs  propagation_node_app_data_parity.rs  propagation_pack_parity.rs  propagation_parity.rs  propagation_stamp_parity.rs  propagation_verification.rs  python_interop_gate.rs  router_behavior.rs  router_parity.rs  router_peer_sync.rs  router_transport.rs  rpc_contract_methods.rs  stamper_parity.rs  stamper_ticket_behavior.rs  storage_file.rs  wire_pack.rs
tools/scripts/: bootstrap-dev.sh  certification-report.sh  check-boundaries.sh  compatibility-kit.sh  embedded-footprint-check.sh  fuzz-campaign.sh  release-scorecard.sh  schema-client-generate.sh  schema-client-smoke.sh  soak-rnx.sh
xtask/: Cargo.toml
xtask/src/: client_codegen.rs  main.rs
(+246 files in other folders)
