[workspace]
resolver = "2"
members = [
  "crates/libs/lxmf-core",
  "crates/libs/lxmf-router",
  "crates/libs/lxmf-runtime",
  "crates/libs/rns-core",
  "crates/libs/rns-transport",
  "crates/libs/rns-rpc",
  "crates/libs/test-support",
  "crates/apps/lxmf-cli",
  "crates/apps/reticulumd",
  "crates/apps/rns-tools",
  "xtask",
]
default-members = [
  "crates/libs/lxmf-core",
  "crates/libs/lxmf-router",
  "crates/libs/lxmf-runtime",
  "crates/libs/rns-core",
  "crates/libs/rns-transport",
  "crates/libs/rns-rpc",
  "crates/libs/test-support",
  "crates/apps/lxmf-cli",
  "crates/apps/reticulumd",
  "crates/apps/rns-tools",
  "xtask",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/FreeTAKTeam/LXMF-rs"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5.29", features = ["derive"] }
base64 = "0.22"
hex = "0.4"
rmp-serde = "1.3.1"
rmpv = "1.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
toml = "0.8"
tokio = { version = "1.44.2", features = ["full"] }
rand_core = "0.6.4"
x25519-dalek = "2.0.1"
thiserror = "1"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_imports = "warn"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "warn"
