[package]
name = "reticulumd"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "reticulum_daemon"

[dependencies]
rns_transport = { package = "rns-transport", path = "../../libs/rns-transport" }
rns_rpc = { package = "rns-rpc", path = "../../libs/rns-rpc" }
lxmf = { package = "lxmf-core", path = "../../libs/lxmf-core", default-features = false }
rns_core = { package = "rns-core", path = "../../libs/rns-core" }
base64 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
rand_core = { workspace = true, features = ["getrandom"] }
x25519-dalek = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
rmpv = { workspace = true }
rmp-serde = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "reticulumd"
path = "src/bin/reticulumd/main.rs"
