[package]
name = "rns-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aes = "0.8.4"
cbc = "0.1.2"
crypto-common = { version = "0.1.6", features = ["rand_core"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hex = "0.4.3"
hkdf = "0.12.4"
hmac = "0.12.1"
log = "0.4.27"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rmp-serde = "1.1.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11"
sha2 = "0.10.8"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[dev-dependencies]
tempfile = "3.19.1"

[features]
default = []
fernet-aes128 = []

[lints]
workspace = true
