[package]
name = "rns-transport"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aes.workspace = true
bzip2.workspace = true
cbc.workspace = true
crypto-common = { workspace = true, features = ["rand_core"] }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
hkdf.workspace = true
hmac.workspace = true
rmp-serde.workspace = true
rmpv.workspace = true
rmp = "0.8.14"
rand_core = { workspace = true, features = ["getrandom"] }
rusqlite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_json.workspace = true
sha2.workspace = true
log.workspace = true
hex.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tokio-serial = { workspace = true }
x25519-dalek = { workspace = true, features = ["static_secrets"] }
rns-core.workspace = true

[features]
default = []
fernet-aes128 = []

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
