[package]
name = "lxmf-sdk-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
lxmf-sdk = { path = ".." }
serde_json = "1"

[[bin]]
name = "sdk_json_envelope"
path = "fuzz_targets/sdk_json_envelope.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
