[package]
name = "rns-rpc-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rns-rpc = { path = ".." }

[[bin]]
name = "rpc_frame_envelope"
path = "fuzz_targets/rpc_frame_envelope.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
